implement OperatorCategories_List react class
Сделал список отдельно, так как предполагаю что затем придётся объединять
форму и список в единый компонент, который уже и будет OperatorCategories.
[#80029328]

--- a/app/categories.haml
+++ b/app/categories.haml
@@ -28,16 +28,5 @@
                 Новая категория
               %br/
               %br/
-              .operator-categories
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "под шеей", "count": 0}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "asdfasd", "count": 0}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "ZZZZZ", "count": 0}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "12321", "count": 0}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "12321", "count": 0}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "asdfadsf", "count": 0}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "Браслет-нить", "count": 144}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "На шею", "count": 34}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "Кольцо", "count": 152}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "Браслет", "count": 28}' )
-                %div( data-react-class="OperatorCategories_Item" data-react-props='{"value": "Украшение на тело", "count": 14}' )
+              %div( data-react-class="OperatorCategories_List" )
             .col-md-6
