implement basic OperatorCategories react class
Подкатегории пока оставляю в стороне
[#80029328]

--- a/app/categories.haml
+++ b/app/categories.haml
@@ -24,9 +24,5 @@
         .col-lg-10.col-lg-offset-1
           .row
             .col-md-6
-              %a.btn.btn-default{:href => "/operator/categories/new"}
-                Новая категория
-              %br/
-              %br/
-              %div( data-react-class="OperatorCategories_List" )
+              %div( data-react-class="OperatorCategories" )
             .col-md-6
