--- a/app/stylesheets/sass/modules/_products.sass
+++ b/app/stylesheets/sass/modules/_products.sass
@@ -189,7 +189,7 @@ $products-form-images-list-padding: 12px
 .products__new-form-remove-params-btn
   display: inline-block
   width: 34px
-  height: $plain-input-height
+  height: 34px
   +opacity(0.32)
   background:
     repeat: no-repeat
@@ -201,7 +201,6 @@ $products-form-images-list-padding: 12px
 
 .products__new-form-remove-variant-btn
   @extend .products__new-form-remove-params-btn
-  margin-top: $font-size-small*2
 
 .products__new-form-variant-type-btn
   @extend .btn
