implement OperatorCategories, Subcategories and http api client
[#80029328]

--- a/app/categories.haml
+++ b/app/categories.haml
@@ -23,4 +23,4 @@
       .container-fluid
         .col-lg-10.col-lg-offset-1
           .row
-            %div( data-react-class="OperatorCategories" )
+            %div( data-react-class="OperatorCategories", data-react-props='{"mockMode": true}' )
