--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -23,7 +23,7 @@
       .container-fluid
         .col-lg-10.col-lg-offset-1
           %h1.header-navbar__title.pull-left Добавить товар
-          %h1.header-navbar__brand.pull-right Field&Rag
+          %h1.header-navbar__brand.pull-right Field&amp;Rag
           -#%form.pull-right
             %input.form-control.orders-list__search-input{type: 'search', placeholder: 'Найти название, номер, артикул'}
           .clearfix
