--- a/app/stylesheets/sass/modules/_orders.sass
+++ b/app/stylesheets/sass/modules/_orders.sass
@@ -1,5 +1,3 @@
-$order-status-bullet-size: 10px
-
 %order__status-btn
   @extend .btn
   @extend .btn-large
@@ -17,6 +15,12 @@ $order-status-bullet-size: 10px
   &, &:hover, &:focus
     color: #fff
 
+.orders-list
+  .text-larger
+    font-size: 16px
+  .products__new-form
+    label
+      margin-bottom: .4em
 
 .orders-list__list
   margin-top: $grid-gutter-width
@@ -33,15 +37,22 @@ $order-status-bullet-size: 10px
   margin:
     top: $grid-gutter-width
     bottom: $grid-gutter-width
+  & > thead > tr
+    & > td
+      padding: 10px
   & > tbody > tr
     & > td
-      vertical-align: middle
-      padding: 10px
+      padding: 25px 10px
       border:
         top: none
         bottom: 1px solid $line-color
-      &.orders-list__table-status
-        padding: 0
+  .order-status-bullet
+    margin:
+      top: .45em
+      right: -100%
+    position: relative
+    float: left
+    left: -1em
 
 .orders-list__table-header
   border-bottom: 1px solid $line-color
@@ -55,17 +66,15 @@ $order-status-bullet-size: 10px
 .orders-list__table-location,
 .orders-list__table-time
   color: $gray-light
-  font-size: 14px
 
 @media screen and (max-width: $screen-sm-max)
   .orders-list__table-status,
   .orders-list__table-header-cell-status
     display: none
 
-.orders-list__table-status
-  color: #fff
+.orders-list__table-status,
+.orders-list__table-header-cell-status
   text-align: center
-  background-color: $gray-light
 
 .orders-list__table-status-btn
   display: block
@@ -80,12 +89,24 @@ $order-status-bullet-size: 10px
   background-color: $gray-lighter
   margin-right: 3px
 
-@each $c in new $green, delivery $blue, cancelled $red, paused $yellow
+.order-status-label
+  padding: 5px 12px
+  display: inline-block
+  background-color: $gray-light
+  font-size: $order-status-label-font-size
+  color: $order-status-label-color !important
+  vertical-align: middle
+  border-radius: $order-status-label-border-radius
+  text-decoration: none !important
+
+@each $c in new $green-dark, delivery $blue-dark, cancelled $orange, paused $yellow
   .orders-list__table > tbody > tr > td
     &.orders-list__table-status-#{nth($c,1)}
       background-color: nth($c,2)
       border-bottom-color: nth($c,2)
   .order-status-bullet-#{nth($c,1)}
+    background-color: nth($c,2)
+  .order-status-label-#{nth($c,1)}
     background-color: nth($c,2)
   .orders-list__modal-btn-#{nth($c,1)}
     &,
@@ -101,7 +122,15 @@ $order-status-bullet-size: 10px
   cursor: pointer
   +transition(background 0.2s ease)
   &:hover
-    background-color: $gray-lightest
+    > td
+      background-color: lighten($gray-lighter, 13%)
+
+.orders-list__more-products
+  margin-top: 3px
+  border:
+    bottom: 1px solid
+  font-size: $font-size-small
+  color: lighten($gray-light, 16%)
 
 .orders-list__modal-btn
   @extend %order__status-btn
@@ -136,7 +165,83 @@ $order-status-bullet-size: 10px
     size: $font-size-larger
 
 
+// Order Header
+.order-header
+  margin-bottom: 44px
+  .order-header__title,
+  .dropdown
+    @include center-block-content
+  > .order-status-label
+    margin-right: 4px
+  .orders-list__dropdown-menu
+    margin-top: -1px
+  .order-creation-time
+    margin-top: .6em
+    text-align: right
 
+.order-header__title
+  margin: 0 30px 0 0
+  font-size: 27px
+
+.order-creation-time
+  display: block
+  font-size: $font-size-larger
+  color: $gray-light
+
+// Order Sections
+.order-sections
+  @include list-style-none
+
+.order-section
+  margin-bottom: 14px
+
+.order-section__header
+  margin-bottom: 26px
+
+.order-section__number
+  @include center-block-content
+  width: 45px
+  height: 45px
+  margin-right: 16px
+  background-color: #2a2a2a
+  font-weight: 100
+  font-size: 27px
+  line-height: 45px
+  color: #fff
+  text-align: center
+  border-radius: 50%
+
+.order-section__title
+  @include center-block-content
+  margin: 0 12px 0 0
+  font-size: 20px
+
+.order-section__edit
+  @include center-block-content
+  width: 32px;
+  height: 32px;
+  border: 1px solid lighten($gray-light, 10%)
+  background:
+    repeat: no-repeat
+    position: center
+    image: url('#{$images-path}/pencil@3x.png')
+  background-size: 16px 16px;
+  cursor: pointer
+  border-radius: 50%
+  +transition(border .3s ease)
+  span
+    font: 0/0 a
+  &:hover
+    border-color: lighten($gray-light, 7%)
+
+.order-product-name
+  margin: 0
+  font-weight: bold
+  font-size: 16px
+  line-height: inherit
+  color: $text-color
+
+// Modal
 .modal.orders-modal
   text-align: center
   &:before
@@ -149,3 +254,7 @@ $order-status-bullet-size: 10px
     display: inline-block
     text-align: left
     vertical-align: middle
+
+.price-label
+  font-size: 26px
+  font-weight: 100
