fix variables fix

--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -10,7 +10,7 @@ $blue: #0BAFFC
 $blue-dark: darken($blue, 20%)
 $red: #f6584f
 $red-dark: #CB1F35
-$green: #57CB6A //#16cc47
+$green: #57CB6A
 $green-dark: #57CB6A
 $orange: #ff4500
 $yellow: #ffd600
