--- a/app/stylesheets/sass/modules/_orders.sass
+++ b/app/stylesheets/sass/modules/_orders.sass
@@ -218,14 +218,14 @@
 
 .order-section__edit
   @include center-block-content
-  width: 32px;
-  height: 32px;
+  width: 32px
+  height: 32px
   border: 1px solid lighten($gray-light, 10%)
   background:
     repeat: no-repeat
     position: center
     image: url('#{$images-path}/pencil@3x.png')
-  background-size: 16px 16px;
+  background-size: 16px 16px
   cursor: pointer
   border-radius: 50%
   +transition(border .3s ease)
