--- a/app/stylesheets/sass/modules/_buttons.sass
+++ b/app/stylesheets/sass/modules/_buttons.sass
@@ -87,7 +87,8 @@
 
 .bare-btn--white
   background: #fff
-  @extend %font-normal
+  // Error: No such extention!
+  // @extend %font-normal
   +link-colors($text-color, $brand-color)
 
 .bare-btn--full
