--- a/app/stylesheets/sass/modules/_orders.sass
+++ b/app/stylesheets/sass/modules/_orders.sass
@@ -1,6 +1,7 @@
 %order__status-btn
   @extend .btn
-  @extend .btn-large
+  // Error! No such extention
+  //@extend .btn-large
   border-radius: 0
   +antialiased
   &, &:hover, &:focus
