rename env.sass -> env.scss

--- a/app/stylesheets/env.scss
+++ b/app/stylesheets/env.scss
@@ -1,3 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
+
 // Тут прописываем всякие font-path и image-path
-$images-path: "../assets"
+$images-path: "../assets";
