--- a/app/stylesheets/sass/modules/_categories.sass
+++ b/app/stylesheets/sass/modules/_categories.sass
@@ -13,6 +13,8 @@
         color: $link-color-hover
   &.ui-sortable-helper
     box-shadow: 0 2px 5px rgba(0, 0, 0, .8)
+  &.active
+    background-color: $yellow
 
 .operator-categories__item-counter
   font-size: $font-size-smaller
