new html-code categories

--- a/app/order.haml
+++ b/app/order.haml
@@ -164,10 +164,11 @@
                           %tbody
                             %tr
                               %td.border-top-none
-                                %img{:src => "assets/product-92x92-1.jpg", :alt => ""}
+                                %a{:href => "#product", :title => 'Мыльница с якорем'}
+                                  %img{:src => "assets/product-92x92-1.jpg", :alt => ""}
                               %td.border-top-none
                                 %h4.order-product-name
-                                  Мыльница с якорем
+                                  %a{:href => "#product", :title => 'Мыльница с якорем'} Мыльница с якорем
                                 %p
                                   Размер: 16
                                   %br
@@ -178,13 +179,14 @@
                                 .price-label
                                   12 000 руб.
                               %td.border-top-none
-                                .btn-remove-circle
+                                %button.btn-remove-circle
                             %tr
                               %td
-                                %img{:src => "assets/product-92x92-1.jpg", :alt => ""}
+                                %a{:href => "#product", :title => 'Мыльница с якорем'}
+                                  %img{:src => "assets/product-92x92-1.jpg", :alt => ""}
                               %td
                                 %h4.order-product-name
-                                  Мыльница с якорем
+                                  %a{:href => "#product", :title => 'Мыльница с якорем'} Мыльница с якорем
                                 %p
                                   Размер: 16
                                   %br
@@ -195,7 +197,7 @@
                                 .price-label
                                   12 000 руб.
                               %td
-                                .btn-remove-circle
+                                %button.btn-remove-circle
                             %tr
                               %td.border-top-none{colspan: 3}
                                 .btn.btn-add-fields{role: 'products__new-form-params-add'}
