--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -26,6 +26,7 @@
 
 @import "settings/forms";
 @import "settings/tooltip";
+@import "settings/labels";
 
 @import "modules/buttons";
 @import "modules/toggle";
@@ -44,3 +45,5 @@
 @import "modules/pagination";
 @import "modules/breadcrumbs";
 @import "modules/tables";
+
+@import "modules/adm-categories";
