--- a/app/stylesheets/sass/modules/_orders.sass
+++ b/app/stylesheets/sass/modules/_orders.sass
@@ -94,7 +94,8 @@
   padding: 5px 12px
   display: inline-block
   background-color: $gray-light
-  font-size: $order-status-label-font-size
+  font-weight: 400
+  font-size: $font-size-small
   color: $order-status-label-color !important
   vertical-align: middle
   border-radius: $order-status-label-border-radius
