--- a/app/stylesheets/sass/modules/_tables.sass
+++ b/app/stylesheets/sass/modules/_tables.sass
@@ -17,3 +17,10 @@
     margin-bottom: 5px
   .btn-add-fields
     margin-top: 20px
+
+.table-default
+  a
+    font-weight: inherit
+    color: inherit
+    &:hover
+      color: $link-hover-color
