--- a/app/stylesheets/sass/settings/_mixins.scss
+++ b/app/stylesheets/sass/settings/_mixins.scss
@@ -98,6 +98,11 @@
   vertical-align: middle;
 }
 
+// New name
+@mixin inline-valign-middle {
+  @include center-block-content
+}
+
 @function arrow-direction($direction) {
   @if $direction == bottom {
     @return top left;
