--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -22,6 +22,12 @@ $brand-color-light: lighten($yellow, 10%)
 $brand-color-dark: darken($yellow, 10%)
 $line-color: $gray-lighter
 
+$brand-success: $green
+$brand-warning: $orange
+
+$label-success-bg: $brand-success
+$label-warning-bg: $brand-warning
+
 $text-color: $gray-darker
 $text-color-dark: $gray-darker
 $text-color-light: lighten($text-color, 10%)
