--- a/app/index.haml
+++ b/app/index.haml
@@ -11,7 +11,7 @@
       .login__block
         -#.alert.alert-danger
         .login__form
-          - pages = [{url: 'signup.html', title: 'Регистрация'}, {url: 'signup_errors.html', title: 'Регистрация (ошибки)'}, {url: 'signup_pin.html', title: 'Регистраци (подтверждение пин-кода)'}, {url: 'login.html', title: 'Авторизация'}, {url: 'login_errors.html', title: 'Авторизация (ошибки)'}, {url: 'reset_password.html', title: 'Восстановить пин-код'}, {url: 'orders.html', title: 'Заказы (старый дизайн)'}, {url: 'orders_list.html', title: 'Заказы'}, {url: 'order.html', title: 'Страница заказа'}, {url: 'products.html', title: 'Страница товаров'}, {url: 'products_new.html', title: 'Добавление нового товара'}, {url: 'categories.html', title: 'Категории товаров'}]
+          - pages = [{url: 'signup.html', title: 'Регистрация'}, {url: 'signup_errors.html', title: 'Регистрация (ошибки)'}, {url: 'signup_pin.html', title: 'Регистраци (подтверждение пин-кода)'}, {url: 'login.html', title: 'Авторизация'}, {url: 'login_errors.html', title: 'Авторизация (ошибки)'}, {url: 'reset_password.html', title: 'Восстановить пин-код'}, {url: 'orders.html', title: 'Заказы (старый дизайн)'}, {url: 'orders_list.html', title: 'Заказы'}, {url: 'order.html', title: 'Страница заказа'}, {url: 'products.html', title: 'Страница товаров'}, {url: 'products_new.html', title: 'Добавление нового товара'}, {url: 'categories.html', title: 'Категории товаров (старое)'}, {url: 'adm-categories.html', title: 'Категории товаров (новое)'}]
           - for page of pages
             - page = pages[page]
             %h3
